--- a/WeatherApp/style.css
+++ b/WeatherApp/style.css
@@ -1,4 +1,4 @@
-.circle-red{
+.circle-red {
   height: 150px;
   width: 150px;
   border-radius: 50%;
@@ -7,23 +7,26 @@
   z-index: 9;
   transform: translateX(-50%);
 }
-body{
-  background-image: url(./assets/bg.avif);
 
+body {
+  background-image: url(./assets/bg.avif);
   background-repeat: no-repeat;
   background-size: cover;
 }
-.nav{
+
+.nav {
   display: flex;
 }
-.logo{
+
+.logo {
   font-size: x-large;
   font-weight: bold;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-section{
+.container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: blanchedalmond;
@@ -31,34 +34,64 @@ section{
   width: 60%;
   height: 200px;
   box-shadow: 10px 10px 15px black;
-  margin:10px auto;
-
+  margin: 10px auto;
+  padding: 10px;
 }
 
-input{
+input {
   border: none;
-  padding: 8px 8px;
+  padding: 8px;
   width: 90%;
   border-radius: 10px;
   outline: none;
 }
-section span{
+
+.input {
   background-color: white;
-  width: 40%;
-  border-radius: 10px;
+  display: flex;
+  border-radius: 12px;
+  padding: 4px;
+
+}
+.input button{
+  border:none;
+  background:transparent;
+  cursor: pointer;
+}
+
+.output {
+  display: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: flex !important;
+  flex-direction: column;
+  width: 80%;
+  margin: 10px 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.city-name {
+  font-weight: bold;
+  font-size: large;
+  text-align: center;
+  margin: 0;
+}
+
+.city-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2px;
+}
+
+.result {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 2px 2px;
-}
-
-#search-icon{
-  background:transparent;
-  border: none;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-}
-
-#search-icon:hover {
-  transform: scale(1.1); /* Scales the icon to 110% when hovered */
+  min-width: 90%;
 }
